web/sdk/admin/views/organizations/details/layout/layout.module.css
.page {
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.main_content {
  width: 100%;
  transition: width 0.3s ease;
}

.main_content_with_sidepanel {
  width: calc(100% - 400px);
  transition: width 0.3s ease;
}

.navbar {
  padding: var(--rs-space-4) var(--rs-space-7);
  border-bottom: 0.5px solid var(--rs-color-border-base-primary);
  background: var(--rs-color-background-base-primary);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navbar-action-menu-content {
  min-width: 160px;
}

.navbar-action-menu-item {
  display: flex;
  justify-content: space-between;
}

.side-panel-section-item-label {
  width: 120px;
}

.invite-users-dialog-body {
  display: flex;
  flex-direction: column;
  padding: var(--rs-space-9) var(--rs-space-7);
  gap: var(--rs-space-7);
}

.invite-users-dialog-label {
  font-weight: var(--rs-font-weight-medium);
}

.invite-users-dialog-roles-content {
  /* 9999 is z-index of dialog */
  z-index: 10000;
}

.form-error-message {
  color: var(--rs-color-foreground-danger-primary);
}

.add-token-dialog-tokens-field::-webkit-inner-spin-button,
.add-token-dialog-tokens-field::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* For Firefox */
.add-token-dialog-tokens-field {
  -moz-appearance: textfield;
}

.nav-chip {
  cursor: pointer;
}

